// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/BorderRadius Borders 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderRadius": "0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-radius-none
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderRadius": "10px",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-radius-sm
      </span>
      <span
        className="label"
      >
        10px
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderRadius": "20px",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-radius-md
      </span>
      <span
        className="label"
      >
        20px
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderRadius": "30px",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-radius-lg
      </span>
      <span
        className="label"
      >
        30px
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderRadius": "9999px",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-radius-full
      </span>
      <span
        className="label"
      >
        9999px
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/BorderRadius Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="box"
      style={
        Object {
          "borderRadius": "0",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --border-radius-none
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
</div>
`;
